Fix errors and warnings part 1